# paperRAG

./: .env.example  .gitignore  CLAUDE.md  MANIFEST.in  README.md  pyproject.toml  start.sh
src/: __init__.py  config.py  main.py
src/api/: __init__.py  export_import.py  mcp_server.py  routes.py
src/chunker/: __init__.py  paper_chunker.py
src/db/: __init__.py  metadata.py
src/embedding/: __init__.py  bge_m3.py
src/llm/: __init__.py  generator.py
src/parser/: __init__.py  marker.py  structure.py
src/retriever/: __init__.py  qdrant_store.py  search.py
src/web/: __init__.py
src/web/static/: app.js  index.html  style.css
