[project]
name = "paper-rag"
version = "0.1.0"
description = "RAG system for academic papers — PDF/DOCX parsing, BGE-M3 embedding, Qdrant search, Web UI + MCP"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "vdmc34"}
]
keywords = ["rag", "papers", "pdf", "academic", "embedding", "qdrant", "bge-m3", "deepseek"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "qdrant-client>=1.13.0",
    "mcp>=1.0.0",
    "pydantic>=2.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "aiofiles>=24.0",
    "sentence-transformers>=3.0.0",
    "jieba>=0.42",
]

[project.scripts]
paper-rag = "src.main:main"

[dependency-groups]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
